[tool.poetry]
name = "rpdb"
version = "0.1.6"
description = "pdb wrapper with remote access via tcp socket"
authors = ["Bertrand Janin <b@janin.com>"]
readme = "README.rst"
homepage = "http://tamentis.com/projects/rpdb"
packages = [{include = "rpdb"}]

[tool.poetry.dependencies]
python = ">=2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.classifiers]
"Development Status" = "4 - Beta"
"Environment" = "Console"
"Intended Audience" = "Developers"
"License" = "OSI Approved :: ISC License (ISCL)"
"Operating System" = "MacOS :: MacOS X"
"Operating System" = "Microsoft :: Windows"
"Operating System" = "POSIX"
"Programming Language" = "Python :: 2.5"
"Programming Language" = "Python :: 2.6"
"Programming Language" = "Python :: 2.7"
"Programming Language" = "Python :: 3.0"
"Programming Language" = "Python :: 3.1"
"Topic" = "Software Development :: Debuggers"
