[tool.poetry]
name = "rpdb"
version = "0.1.6"
description = "pdb wrapper with remote access via tcp socket"
authors = ["Bertrand Janin <b@janin.com>"]
readme = "README.rst"
homepage = "http://tamentis.com/projects/rpdb"
packages = [{ include = "rpdb" }]

[tool.poetry.dependencies]
python = ">=2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
