[tool.poetry]
name = "rpdb"
version = "0.2.1"
description = "pdb wrapper with remote access via tcp socket"
authors = ["Bertrand Janin <b@janin.com>", "Michael Bianco <mike@mikebian.co>"]
readme = "README.md"
homepage = "https://github.com/tamentis/rpdb"
packages = [{ include = "rpdb" }]

[tool.poetry.dependencies]
python = ">=3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
